Eint23 444 get positions pending confirmation rework